; ModuleID = '/home/carl/AnghaBench/radare2/libr/util/extr_buf_ref.c_buf_ref_seek.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/util/extr_buf_ref.c_buf_ref_seek.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buf_ref_priv = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32)* @buf_ref_seek to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @buf_ref_seek(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.buf_ref_priv*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = call %struct.buf_ref_priv* @get_priv_ref(i32* %9)
  store %struct.buf_ref_priv* %10, %struct.buf_ref_priv** %8, align 8
  %11 = load i32, i32* %7, align 4
  switch i32 %11, label %30 [
    i32 130, label %12
    i32 128, label %18
    i32 129, label %22
  ]

12:                                               ; preds = %3
  %13 = load i32, i32* %6, align 4
  %14 = load %struct.buf_ref_priv*, %struct.buf_ref_priv** %8, align 8
  %15 = getelementptr inbounds %struct.buf_ref_priv, %struct.buf_ref_priv* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = add nsw i32 %16, %13
  store i32 %17, i32* %15, align 4
  br label %32

18:                                               ; preds = %3
  %19 = load i32, i32* %6, align 4
  %20 = load %struct.buf_ref_priv*, %struct.buf_ref_priv** %8, align 8
  %21 = getelementptr inbounds %struct.buf_ref_priv, %struct.buf_ref_priv* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  br label %32

22:                                               ; preds = %3
  %23 = load %struct.buf_ref_priv*, %struct.buf_ref_priv** %8, align 8
  %24 = getelementptr inbounds %struct.buf_ref_priv, %struct.buf_ref_priv* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* %6, align 4
  %27 = add nsw i32 %25, %26
  %28 = load %struct.buf_ref_priv*, %struct.buf_ref_priv** %8, align 8
  %29 = getelementptr inbounds %struct.buf_ref_priv, %struct.buf_ref_priv* %28, i32 0, i32 0
  store i32 %27, i32* %29, align 4
  br label %32

30:                                               ; preds = %3
  %31 = call i32 (...) @r_warn_if_reached()
  store i32 -1, i32* %4, align 4
  br label %36

32:                                               ; preds = %22, %18, %12
  %33 = load %struct.buf_ref_priv*, %struct.buf_ref_priv** %8, align 8
  %34 = getelementptr inbounds %struct.buf_ref_priv, %struct.buf_ref_priv* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  store i32 %35, i32* %4, align 4
  br label %36

36:                                               ; preds = %32, %30
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local %struct.buf_ref_priv* @get_priv_ref(i32*) #1

declare dso_local i32 @r_warn_if_reached(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
